kargo/homelab/worthly-prod/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: worthly
spec:
  selector:
    app: worthly
  ports:
    - port: 5050
      targetPort: 5050
  type: ClusterIP
